<resources>
    <string name="app_name">Smart Receipts</string>
    <string name="menu_main_settings">Settings</string>
    <string name="menu_main_categories">Categories</string>
    <string name="menu_main_csv">Customize CSV Output</string>
    <string name="menu_main_pdf">Customize PDF Output</string>
    <string name="menu_main_export">Backup</string>
    <string name="menu_main_about">About</string>
	<string name="add">Add</string>
	<string name="add_item">Add %s</string>
	<string name="category">Category</string>
	<string name="column">Column</string>
	<string name="copy">Copy</string>
	<string name="default_currency">Default Currency: </string>
    <string name="delete">Delete</string>
    <string name="delete_item">Delete %s?</string>
    <string name="edit">Edit</string>
    <string name="export">Export</string>
    <string name="image">Image</string>
    <string name="import_string">Import</string>
    <string name="move">Move</string>
    <string name="move_copy_item">Move/Copy %s?</string>
    <string name="no">No</string>
    <string name="pdf">PDF</string>
    <string name="report">Report</string>
    <string name="receipt">Receipt</string>
    <string name="save">Save</string>
    <string name="total_item">Total: %s</string>
    <string name="type">Type</string>
	<string name="update">Update</string>
    <string name="yes">Yes</string>
	<string name="yes_as_pdf">Yes - As PDF</string>
	<string name="category_name">Name: </string>
	<string name="category_code">Code: </string>
	<string name="category_null">&lt;Category&gt;</string>
	<string name="category_null_code">NUL</string>
	<string name="category_airfare">Airfare</string>
	<string name="category_airfare_code">AIRP</string>
	<string name="category_breakfast">Breakfast</string>
	<string name="category_breakfast_code">BRFT</string>
	<string name="category_dinner">Dinner</string>
	<string name="category_dinner_code">DINN</string>
	<string name="category_entertainment">Entertainment</string>
	<string name="category_entertainment_code">ENT</string>
	<string name="category_gasoline">Gasoline</string>
	<string name="category_gasoline_code">GAS</string>
	<string name="category_gift">Gift</string>
	<string name="category_gift_code">GIFT</string>
	<string name="category_hotel">Hotel</string>
	<string name="category_hotel_code">HTL</string>
	<string name="category_laundry">Laundry</string>
	<string name="category_laundry_code">LAUN</string>
	<string name="category_lunch">Lunch</string>
	<string name="category_lunch_code">LNCH</string>
	<string name="category_other">Other</string>
	<string name="category_other_code">MISC</string>
	<string name="category_parking_tolls">Parking/Tolls</string>
	<string name="category_parking_tolls_code">PARK</string>
	<string name="category_postage_shipping">Postage/Shipping</string>
	<string name="category_postage_shipping_code">POST</string>
	<string name="category_car_rental">Car Rental</string>
	<string name="category_car_rental_code">RCAR</string>
	<string name="category_taxi_bus">Taxi/Bus</string>
	<string name="category_taxi_bus_code">TAXI</string>
	<string name="category_telephone_fax">Telephone/Fax</string>
	<string name="category_telephone_fax_code">TELE</string>
	<string name="category_tip">Tip</string>
	<string name="category_tip_code">TIP</string>
	<string name="category_train">Train</string>
	<string name="category_train_code">TRN</string>
	<string name="category_books_periodicals">Books/Periodicals</string>
	<string name="category_books_periodicals_code">ZBKP</string>
	<string name="category_cell_phone">Cell Phone</string>
	<string name="category_cell_phone_code">ZCEL</string>
	<string name="category_dues_subscriptions">Dues/Subscriptions</string>
	<string name="category_dues_subscriptions_code">ZDUE</string>
	<string name="category_meals_justified">Meals (Justified)</string>
	<string name="category_meals_justified_code">ZMEO</string>
	<string name="category_stationery_stations">Stationery/Stations</string>
	<string name="category_stationery_stations_code">ZSTS</string>
	<string name="category_training_fees">Training Fees</string>
	<string name="category_training_fees_code">ZTRN</string>
    <string name="menu_receiptimage_retake">Retake Photo</string>
    <string name="menu_receiptimage_rotate_ccw">Rotate CCW</string>
    <string name="menu_receiptimage_rotate_cw">Rotate CW</string>
    <string name="progress_import">Importing your files&#8230;</string>
    <string name="SD_ERROR">Error: Please make sure that your SD Card is available and not mounted to your computer.</string>
    <string name="SD_WARNING">Warning: Your SD Card is not available or is mounted to your computer. Some images may be inaccessible. Switching to internal storage&#8230;</string>
    <string name="DB_ERROR">Error: Another application is using the SQLite Database.</string>
    <string name="IMG_OPEN_ERROR">Error: The image is currently inaccessible or corrupted. Your SD Card may be unavailable or mounted to your computer. If not, click the menu button to retake the photo.</string>
    <string name="toast_pdf_open_error">Error: Failed to open the PDF. PDF viewing may not be supported on your platform.</string>
    <string name="IMG_SAVE_ERROR">Error: The Image Failed to Save Properly</string>
    <string name="toast_pdf_save_error">Error: The pdf failed to save properly.</string>
    <string name="IMG_SEND_ERROR">Error: The Image was not properly sent to this app</string>
    <string name="ILLEGAL_CHAR_ERROR">Error: The name contains an illegal character</string>
    <string name="SPACE_ERROR">Error: The name cannot begin with a space</string>
    <string name="CALENDAR_TAB_ERROR">Error: Please Touch the Date TextBox to set the Date</string>
    <string name="DURATION_ERROR">Error: The Start Date Must Occur Prior To The End Date</string>
    <string name="EXPORT_ERROR">Error: Failed to properly export your data. Please make sure your phone is not mounted to your computer.</string>
    <string name="IMPORT_ERROR">Error: Failed to recognize the file as importable</string>
    <string name="MOVE_ERROR">Error: Failed to move the receipt</string>
    <string name="COPY_ERROR">Error: Failed to copy the receipt</string>
    <string name="toast_error_trip_exists">Error: An expense report with that name already exists</string>
    <string name="toast_error_category_exists">Error: An category with that name already exists</string>
    <string name="toast_error_invalid_input">Invalid Input</string>
     <string name="toast_receipt_copy">Successfully copied the receipt</string>
     <string name="toast_receipt_move">Successfully moved the receipt</string>
     <string name="toast_receipt_image_added">Successfully added a new image to %s</string>
     <string name="toast_receipt_image_replaced">Successfully replaced a new image for %s</string>
     <string name="toast_receipt_pdf_added">Successfully added a new PDF to %s</string>
     <string name="toast_receipt_pdf_replaced">Successfully replaced a new PDF for %s</string>
     <string name="toast_import_complete">Successfully imported all files. Please re-launch the app.</string>
     <string name="toast_import_complete_simple">Successfully imported all files.</string>
    <string name="trip_adapter_new_trip">Expense Report</string>
    <string name="trip_adapter_list_item_to">\u0020to\u0020</string>
    <string name="trip_no_data">You don\'t seem to have any reports defined at the moment. Try clicking the "+" (plus) button up top to get started.\n\nSmart Receipts lets you create Expense reports, track receipts within each, and quickly generate PDF &amp; CSV reports for your receipt totals. It\'s quick and easy! Also, be sure to check out the menu to customize the categories, reports, and other settings to best suit for your needs.</string>
    <string name="receipt_adapter_picture_receipt">Picture Receipt</string>
    <string name="receipt_adapter_text_receipt">Text-Only Receipt</string>
    <string name="receipt_adapter_email">Email Report</string>
    <string name="receipt_adapter_distance">Distance -\u0020</string>
    <string name="receipt_no_data">You don\'t seem to have any receipts yet. Try tapping the \"Picture\" or \"Text-Only\" option below to get started&#8230;</string>
    <string name="trip_action_new">New Report</string>
    <string name="receipt_action_camera">Picture</string>
    <string name="receipt_action_gallery">Gallery</string>
    <string name="receipt_action_text">Text-Only</string>
    <string name="receipt_action_send">Generate</string>
    <string name="receipt_action_distance">Distance</string>
    <string name="card_overflow_contentDescription">Receipt Options</string>
    <string name="card_thumbnail_contentDescription">Receipt Thumbnail</string>
    <string name="DIALOG_CANCEL">Cancel</string>
    <string name="DIALOG_WELCOME_TITLE">@string/app_name</string>
    <string name="DIALOG_WELCOME_MESSAGE">Thanks for downloading Smart Receipts. To get started, tap the "Expense Report" button. Once you\'ve created a report, tap on it to begin adding receipts. At the end of each week, you can export PDF and CSV reports of your receipt totals. Also, be sure to check out the settings menu to customize this application for your needs. Thanks!</string>
    <string name="DIALOG_WELCOME_POSITIVE_BUTTON">Get Started</string>
    <string name="dialog_pro_welcome_title">@string/app_name</string>
    <string name="dialog_pro_welcome_message">It seems that you previously used the Free version of Smart Receipts. Would you like to import that data?</string>
    <string name="DIALOG_EMAIL_TITLE">Select Attachments&#8230;</string>
    <string name="DIALOG_EMAIL_MESSAGE"></string>
    <string name="DIALOG_EMAIL_CHECKBOX_PDF_FULL">Full PDF Report</string>
    <string name="DIALOG_EMAIL_CHECKBOX_PDF_IMAGES">PDF Report - No Table</string>
    <string name="DIALOG_EMAIL_CHECKBOX_CSV">CSV File</string>
    <string name="DIALOG_EMAIL_CHECKBOX_ZIP_IMAGES_STAMPED">ZIP - Stamped JPGs</string>
    <string name="DIALOG_EMAIL_POSITIVE_BUTTON">Email</string>
    <string name="DIALOG_EMAIL_NEGATIVE_BUTTON">Cancel</string>
    <string name="DIALOG_EMAIL_TOAST_NO_SELECTION">Please Check At Least Attachment Option</string>
    <string name="DIALOG_EMAIL_TOAST_NO_RECEIPTS">There are No Receipts in this Report</string>
    <string name="DIALOG_SETTINGS_TEXTVIEW_EMAIL">Default Email Recipient:</string>
    <string name="DIALOG_SETTINGS_TEXTVIEW_DURATION">Default Trip Length (Days):</string>
    <string name="DIALOG_SETTINGS_TEXTVIEW_CURRENCY">Default Currency:</string>
    <string name="DIALOG_SETTINGS_TEXTVIEW_MIN_PRICE">Min. Receipt Price to Report:</string>
    <string name="DIALOG_SETTINGS_EDITTEXT_MIN_PRICE">Leave Blank to Include All</string>
    <string name="DIALOG_SETTINGS_TEXTVIEW_USER_ID">User ID:</string>
    <string name="DIALOG_SETTINGS_CHECKBOX_PREDICT">Predict Receipt Categories</string>
    <string name="DIALOG_SETTINGS_CHECKBOX_NATIVE_CAMERA">Use Native Camera</string>
    <string name="DIALOG_SETTINGS_CHECKBOX_TAX">Include Tax Field For Receipts</string>
    <string name="DIALOG_SETTINGS_CHECKBOX_NAME_TO_CAT">Match Name to Categories</string>
    <string name="DIALOG_SETTINGS_CHECKBOX_COMMENT_TO_CAT">Match Comments to Categories</string>
    <string name="pref_account_header">Account Settings</string>
    <string name="pref_account_predict_categories_title">Predict Receipt Categories</string>
    <string name="pref_account_match_name_to_category_title">Match Name to Categories</string>
    <string name="pref_account_use_native_camera_title">Use Native Camera</string>
    <string name="pref_account_expensable_only_title">Only Report Expensable Receipts</string>
    <string name="pref_account_include_tax_field_title">Include Tax Field For Receipts</string>
    <string name="pref_account_enable_autocomplete_title">Enable AutoComplete Suggestions</string>
</resources>