<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/list_background" >
	<ListView
		android:id="@android:id/list" 
		android:layout_height="match_parent"
		android:layout_width="match_parent" 
		android:padding="@dimen/card_divider_padding"
		android:divider="@android:color/transparent"
 		android:dividerHeight="@dimen/card_divider_padding" 
 		android:drawSelectorOnTop="false"
 		android:visibility="invisible"
 		android:layout_above="@id/footer" />
	<ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />
	<TextView
	    android:id="@+id/no_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:padding="@dimen/no_data_padding"
        android:text="@string/receipt_no_data"
        android:textSize="@dimen/no_data_textSize"
        android:visibility="invisible" />
	<LinearLayout
	    android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:background="@color/smart_receipts_purple">
        <LinearLayout
		    android:id="@+id/receipt_action_camera"
		    android:layout_height="wrap_content"
		    android:layout_width="0dp"
		    android:orientation="vertical"
		    android:layout_weight="1" 
		    android:gravity="center"
		    android:background="@drawable/default_selector" >
            <ImageView
                android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:src="@drawable/ic_action_camera"
            	android:contentDescription="@string/receipt_action_camera" />
            <TextView
                android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:textSize="@dimen/receipt_action_size"
            	android:text="@string/receipt_action_camera" 
            	android:textStyle="italic"/>
		</LinearLayout>
		<!-- 
		<LinearLayout
		    android:id="@+id/receipt_action_gallery"
		    android:layout_height="wrap_content"
		    android:layout_width="0dp"
		    android:orientation="vertical"
		    android:layout_weight="1" 
		    android:gravity="center"
		    android:background="@drawable/default_selector" >
            <ImageView
                android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:src="@drawable/ic_action_camera"
            	android:contentDescription="@string/receipt_action_gallery" />
            <TextView
                android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:textSize="@dimen/receipt_action_size"
            	android:text="@string/receipt_action_gallery"
            	android:textStyle="italic" />
		</LinearLayout>
		 -->
		<LinearLayout
		    android:id="@+id/receipt_action_text"
		    android:layout_height="wrap_content"
		    android:layout_width="0dp"
		    android:orientation="vertical"
		    android:layout_weight="1" 
		    android:gravity="center"
		    android:background="@drawable/default_selector" >
            <ImageView
                android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:src="@drawable/ic_action_text"
            	android:contentDescription="@string/receipt_action_text" />
            <TextView
                android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:textSize="@dimen/receipt_action_size"
            	android:text="@string/receipt_action_text"
            	android:textStyle="italic" />
		</LinearLayout>
		<LinearLayout
		    android:id="@+id/receipt_action_distance"
		    android:layout_height="wrap_content"
		    android:layout_width="0dp"
		    android:orientation="vertical"
		    android:layout_weight="1" 
		    android:gravity="center"
		    android:background="@drawable/default_selector" >
            <ImageView
                android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:src="@drawable/ic_action_web_site"
            	android:contentDescription="@string/receipt_action_distance" />
            <TextView
                android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:textSize="@dimen/receipt_action_size"
            	android:text="@string/receipt_action_distance"
            	android:textStyle="italic" />
		</LinearLayout>
		<LinearLayout
		    android:id="@+id/receipt_action_send"
		    android:layout_height="wrap_content"
		    android:layout_width="0dp"
		    android:orientation="vertical"
		    android:layout_weight="1" 
		    android:gravity="center"
		    android:background="@drawable/default_selector" >
            <ImageView
                android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:src="@drawable/ic_action_send_now"
            	android:contentDescription="@string/receipt_action_send" />
            <TextView
                android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:textSize="@dimen/receipt_action_size"
            	android:text="@string/receipt_action_send"
            	android:textStyle="italic" />
		</LinearLayout>
    </LinearLayout>
</RelativeLayout>